feat: user room route
